--- a/source/post/2021/2102.md
+++ b/source/post/2021/2102.md
@@ -73,12 +73,29 @@ benchmark: https://github.com/frevib/io_uring-echo-server/blob/master/benchmarks
 
 ## 节点管理
 
++ 来源节点
+
 ## 跨平台和C Binding
 
 ## 运行时托管
 
 + Rust: smol
 + Rust: async_std
+
+## 云原生支持
+
++ 基于CRD的服务发现和代理
+  + 必须指定目标ID
++ [istio][9]/[openservicemesh][10] 基于标签的路由
+  + 需要部署的时候显式设置UUID
+  + 无法收敛连接
++ [Envoy][11]代理扩展
+  + 侵入式
+  + 开发维护难度高
+
+### 内网访问
+
+### 对外服务
 
 [1]: https://github.com/protocolbuffers/protobuf
 [2]: https://github.com/atframework/libatbus
@@ -88,3 +105,6 @@ benchmark: https://github.com/frevib/io_uring-echo-server/blob/master/benchmarks
 [6]: https://tools.ietf.org/html/rfc8200#section-3
 [7]: https://tools.ietf.org/html/rfc768
 [8]: https://tools.ietf.org/html/rfc793#page-15
+[9]: https://istio.io/
+[10]: https://openservicemesh.io/
+[11]: https://www.envoyproxy.io/
