--- a/source/post/2021/2101.md
+++ b/source/post/2021/2101.md
@@ -312,9 +312,9 @@ int main(int argc, char* argv[]) {
 
 使用脚本处理pb描述一个重大的缺点就是 **“慢”** ， 尤其我们原先是每次生成一组接口都是新开进程跑的。这有个问题就是每次都得重新跑整个pb的符号库的二次构建流程。这非常慢，后来服务多了以后甚至要半分钟之久，而且以后增肌更多类型的服务后还会更长。所以后来我优化了下流程，允许代码生成工具去从 YAML 里读取多个服务的多个生成规则。整个流程里增加了一步，提供了接口把多种类型的服务的声明整合到一个YAML配置文件里。在执行工具生成代码时，先构建好符号库，然后从这个YAML配置文件里读每个服务的模板生成规则，复用同一个符号库。这样就把所有服务和接口的总代码生成的时间又缩短到了3秒以内。
 
-![2021-02.png](2021-02.png)
+![2101-02.png](2101-02.png)
 
-## 实例
+## 示例
 
 我们的应用除了用于实现对外提供服务外，也用于生成一些SDK和平台接入层的代码和文档。对于平台接入层代码，接入者需要写公共接入层代码，使用者只需要按对应平台的文档，根据自己的需要写 ```proto``` 文件文件即可。最终会生成RPC接口；而我们自己对外的服务则要生成的内容更多一些，除了RPC接口外还有空的任务代码和把这个任务注册到调度系统中的注册代码。
 
@@ -322,7 +322,7 @@ int main(int argc, char* argv[]) {
 
 ### 服务间消息
 
-```proto
+```protobuf
 // 路由系统的服务
 service RouterService {
     option (atframework.service_options) = {
@@ -410,13 +410,13 @@ namespace handle {
 }
 ```
 
-生成的 [**空任务代码** ](#生成的空任务代码) 和下面的小节里的一样的，就不做重复展示了。
+生成的 [**空任务代码**](#生成的空任务代码) 和下面的小节里的一样的，就不做重复展示了。
 
 ### HTTP/Websocket接入
 
 我们一些特殊的服务提供的是HTTP+Json接口，还有一部分提供的是Websocket+Json的接口。这两类接口在我们系统里的服务声明时类似的。
 
-```proto
+```protobuf
 // GM 工具服务
 service CustomGmService {
     option (atframework.http.http_service) = {
@@ -434,7 +434,7 @@ service CustomGmService {
 }
 ```
 
-```proto
+```protobuf
 // 对接外部平台的HTTP接口示例
 service HttpService {
     option (atframework.http.http_service) = {
