--- a/source/post/2021/2102.md
+++ b/source/post/2021/2102.md
@@ -6,11 +6,8 @@ categories:
 date: 2021-03-09 19:19:45
 draft: false
 id: 2102
-tags: 
-  - rust
-  - linkedlist
-  - list
-title: [Rust] 实现一个线程安全且迭代器可以保存的链表
+tags: ["rust", "linkedlist", "list"]
+title: "[Rust] 实现一个线程安全且迭代器可以保存的链表"
 type: post
 ---
 
