增加对 atlist-rs 的锁的解释

--- a/source/post/2021/2102.md
+++ b/source/post/2021/2102.md
@@ -31,7 +31,7 @@ Nightly版本的 [Rust][1] 标准库里的 [```std::collections::LinkedList```][
 
 ## 新链表的结构
 
-从另一个角度说，我们需要的是能够保存迭代器，并在需要的时候基于迭代器操作。这本身是一个运行时可以修改容器的行为，属于运行时可变借用。与此同时还需要考虑多线程问题，即迭代器可以在多个县城中转移，就意味着可变借用这个过程可能在多个线程上同时发生。这两点都会带来额外开销。
+从另一个角度说，我们需要的是能够保存迭代器，并在需要的时候基于迭代器操作。这本身是一个运行时可以修改容器的行为，属于运行时可变借用。与此同时还需要考虑多线程问题，即迭代器可以在多个线程中转移，就意味着可变借用这个过程可能在多个线程上同时发生。这两点都会带来额外开销。
 
 链表的实体和节点数据结构如下:
 
@@ -68,13 +68,27 @@ pub struct Iter<T> {
 
 ## 关于Send语义、Sync语义、线程安全
 
-标准库的 [```std::collections::LinkedList<T>```][3] 在实例化类型 ```T``` 支持 ```Send``` 和 ```Sync``` 语义的时候，分别也提供了 ```Send``` 和 ```Sync``` 语义的支持。但是到我们这里会更复杂一点。因为标准库的 [```std::collections::LinkedList<T>```][3] 实际上是走了 [Rust][1] 语言层面的对修改控制权限的管理。包括标准库实现里的 [```Iter```][4] 和 [```Cursor```][6] 里都存了 ```len``` 和提供方法获取后续有多少可用元素都是依赖与此。但是我们这里分离了迭代器和容器的生命周期，就不能简单地这么声明了。
+标准库的 [```std::collections::LinkedList<T>```][3] 在实例化类型 ```T``` 支持 ```Send``` 和 ```Sync``` 语义的时候，分别也提供了 ```Send``` 和 ```Sync``` 语义的支持。但是到我们这里会更复杂一点。因为标准库的 [```std::collections::LinkedList<T>```][3] 实际上是走了 [Rust][1] 语言层面的对修改控制权限的管理。
+
+> 包括标准库实现里的 [```Iter```][4] 和 [```Cursor```][6] 里都存了 ```len``` 和提供方法获取后续有多少可用元素都是依赖于此。
+> 因为 [```IterMut```][5] 或 [```CursorMut```][7] 只要能创建出来，那之前一定没有不可变借用了。那么对 ```len``` 字段的修改就有且仅有最后创建出来的这个 [```IterMut```][5] 或 [```CursorMut```][7]。
+> 也就不存在修改一个迭代器或游标导致影响其他迭代器或游标的问题。
+
+但是我们这里分离了迭代器和容器的生命周期，就不能简单地这么声明了。
 
 首先，由于我需要让这个链表的迭代器和容器的生命周期解绑，所以对链表的节点包了一层 ```Arc<U>``` 。所以我们这个链表节点本身，其实对于所有的类型 ```T``` 都可以支持 ```Send``` 语义。但是访问实际数据的层面还是需要可以 ```Sync``` 才能跨线程读的。所以为了防止误用目前只对同时满足 ```Sync + Send``` 的 ```T``` 类型实现 ```atlist_rs::LinkedList<T>``` 生命为支持 ```Send``` 和 ```Sync``` 。
 
 ## 减少锁的临界区
 
-可以看到我们实际节点的类型为 ```Arc<RwLock<NodeEntry<T>>>``` , 中间还有一层 ```RwLock<U>``` 。因为我们解绑了迭代器和容器的生命周期，那么就无法在编译期保证多线程的场景下对节点的修改操作互相不冲突，这里的锁的作用其实也是为了支持多线程修改容器。但是这个 ```RwLock<U>``` 我们控制在内部使用，不会暴露到外部，这样可以我们自己管理和缩减锁的临界区，并且避免死锁。
+可以看到我们实际节点的类型为 ```Arc<RwLock<NodeEntry<T>>>``` , 中间还有一层 ```RwLock<U>``` 。因为我们解绑了迭代器和容器的生命周期，那么就无法在编译期保证多线程的场景下对节点的修改操作互相不冲突，这里的锁的作用其实也是为了支持多线程访问容器。对链表节点的 ```mutable``` 操作其实已经在链表接口那一层，通过 [Rust][1] 自带的借用管理控制了，不会发生冲突。举个例子，在迭代器和容器的生命周期解绑的情况下，可能发生一个线程在做删除操作，另一个线程在做这个节点的 ```prev``` 正在执行 ```next(&mut self)``` 。这时候需要读这个节点内的数据，然后读到的 ```next``` 的指针就有可能是无效的。
+
+这个 ```RwLock<U>``` 我们控制在内部使用，不会暴露到外部，这样可以我们自己管理和缩减锁的临界区，并且避免死锁。
+
+> 首先所有的加锁操作都是先 ```prev``` 再 ```next``` 这个顺序，就是不会出现一个线程锁 ```A->B``` 另一个线程锁 ```B->A``` 的死锁操作。另一方面，所有的写操作生命周期都是绑在 ```atlist_rs::LinkedList<T>``` 上的，根本不会并发。
+
+其实在写操作被限制在 ```atlist_rs::LinkedList<T>``` 的基础上，这个 ```RwLock<U>``` 理论上是可以省掉的，如果我们的记录节点内部的 ```next``` 和 ```prev``` 直接用 ```Arc<U>``` 保存，而不是按标准库一样存指针，那么也是可以保证多线程安全的，但是目前 ```Arc<U>``` 只提供了非可变借用的访问接口， [```pub unsafe fn get_mut_unchecked(this: &mut Arc<T>) -> &mut T```][9] 还处于nightly阶段。我也不想多去造这个轮子，没啥意义，所以这个去除锁的操作还是等这个特性stable了，我再来优化吧。
+
+> 另一种不依赖 [```pub unsafe fn get_mut_unchecked(this: &mut Arc<T>) -> &mut T```][9] 的方式是再套一层 ```RefCell``` 但是这会影响 ```Send``` 和 ```Sync``` 语义。所以也没有选择这么做。
 
 ## 运行时可变借用
 
@@ -107,3 +121,4 @@ atlist-rs >= "0.2"
 [6]: https://doc.rust-lang.org/std/collections/linked_list/struct.Cursor.html
 [7]: https://doc.rust-lang.org/std/collections/linked_list/struct.CursorMut.html
 [8]: https://doc.rust-lang.org/std/cell/struct.RefCell.html
+[9]: https://doc.rust-lang.org/std/sync/struct.Arc.html#method.get_mut_unchecked
