--- a/source/post/2021/2103.md
+++ b/source/post/2021/2103.md
@@ -16,7 +16,7 @@ type: post
 
 ## 背景
 
-今年有个想法，重新设计 [libatbus][2] 然后用 [Rust][1] 实现出来，然后可以加入一些云原生的支持。这需要一个定时器模块，我看了下 [Rust][1] 现有的几种定时器的实现，大多是基于堆或树的结构的，没有找到
+今年有个想法，重新设计 [libatbus][2] 然后用 [Rust][1] 实现出来，然后可以加入一些云原生的支持。这需要一个定时器模块，我看了下 [Rust][1] 现有的几种定时器的实现，大多是基于堆或树的结构的，没有找到基于时间轮的实现。算了自己写一个吧。
 
 [1]: https://www.rust-lang.org/
 [2]: https://github.com/atframework/libatbus
