补充原始问题

--- a/source/post/2021/2103.md
+++ b/source/post/2021/2103.md
@@ -34,6 +34,45 @@ public:
 
 那么在 **Module** 里怎么处理这种需求呢？其实我之前一直只是知道有这么个东西，并没有深入研究过。前段时间看到公司论坛里有同学问，就现学了并且试了一下，以下是一些记录。
 
+## 问题
+
+举个例子，比如有两个文件:
+
+```cpp
+// file: base.ixx
+module;
+#include <iostream>
+#include <typeinfo>
+export module base;
+
+class derived;
+export class base {
+public:
+	virtual ~base() = default;
+	virtual void visit(derived*) {
+		std::cout << "base::visit -> "<< typeid(*this).name() << std::endl;
+	}
+};
+```
+
+```cpp
+// file: derived.ixx
+module;
+#include <iostream>
+#include <typeinfo>
+export module derived;
+export import base;
+
+export class derived : public base {
+public:
+	virtual void visit(derived*) override {
+		std::cout << "derived::visit -> "<< typeid(*this).name() << std::endl;
+	}
+};
+```
+
+程序的本意是 ```derived``` 继承 ```base``` 类。但是 ```derived::visit(derived*)``` 在多态上override了 ```base::visit(derived*)``` 。但是实际上这里在 ```base.ixx``` 里的 ```class derived``` 和 ```derived.ixx``` 里的 ```class derived``` 不是同一个类。因为他们是处于不同模块内的，作用域和可见性也都不同。
+
 ## Module partitions
 
 按目前 Modules 文档的说法，是 **禁止跨模块交叉引用** 的。
@@ -56,7 +95,7 @@ public:
 module;
 
 export module foo:types;
-export class CDerived;
+export class derived;
 ```
 
 ```cpp
@@ -68,11 +107,11 @@ module;
 export module foo:base;
 import :types;
 
-export class CBase {
+export class base {
 public:
-    virtual ~CBase() = default;
-    virtual void visit(CDerived*) {
-        std::cout << "CBase::visit -> "<< typeid(*this).name() << std::endl;
+    virtual ~base() = default;
+    virtual void visit(derived*) {
+        std::cout << "base::visit -> "<< typeid(*this).name() << std::endl;
     }
 };
 ```
@@ -87,10 +126,10 @@ export module foo:derived;
 import :types;
 import :base;
 
-export class CDerived : public CBase {
+export class derived : public base {
 public:
-    virtual void visit(CDerived*) {
-        std::cout << "CDerived::visit -> "<< typeid(*this).name() << std::endl;
+    virtual void visit(derived*) {
+        std::cout << "derived::visit -> "<< typeid(*this).name() << std::endl;
     }
 };
 ```
@@ -111,9 +150,9 @@ export import :derived;
 import foo;
 
 int main() {
-    CDerived d;
-    CDerived* pd = &d;
-    CBase* pb = pd;
+    derived d;
+    derived* pd = &d;
+    base* pb = pd;
     pb->visit(nullptr);
     pd->visit(nullptr);
 
@@ -124,8 +163,8 @@ int main() {
 执行输出结果如下:
 
 ```bash
-CDerived::visit -> class CDerived
-CDerived::visit -> class CDerived
+derived::visit -> class derived
+derived::visit -> class derived
 ```
 
 ## 编译命令
