Fix styles for bootstrap 5.0
Signed-off-by: owent <owent@tencent.com>

--- a/source/post/2015/1201.md
+++ b/source/post/2015/1201.md
@@ -13,7 +13,7 @@ categories:
 date: 2015-11-08 17:17:05
 ---
 
-> [接上文关于bus通信系统的一些思考（二）](://www.owent.net/2014/1099.html)
+> [接上文关于bus通信系统的一些思考（二）](//www.owent.net/2014/1099.html)
 >
 > 之前的文章内容应该要有修订，但是并没有更新到blog里，而是直接写在了[libatbus](https://github.com/atframework/libatbus)的文档里
 
