修订一些文档
Signed-off-by: owent <admin@owent.net>

--- a/source/post/2021/2106.md
+++ b/source/post/2021/2106.md
@@ -86,13 +86,13 @@ maybe(
 
 显然易用性和安全性 [vcpkg][1] 好很多，而且基于 [git][13] 和 [cmake][7] 的 [vcpkg][1] 也可以实现非常灵活的功能，但是 [vcpkg][1] 也有一些缺陷。
 
-首先是和 [bazel][9] 类似的，很难对依赖包做一些定制。导入一个包的时候，要么不要，要么全要。比如使用 libwebsockets 的时候，本来是可以选择使用openssl，mbedtls或者其他的库作为SSL库的，或者说有些功能不需要可以连依赖库带功能都不开。但是使用 [vcpkg][1] 安装 libwebsockets 的话，就没得选了。不过现在好像设计了一个有点类似 [build2][5] 的方案，一定层度上解决了这个问题。
+首先是和 [bazel][9] 类似的，很难对依赖包做一些定制。导入一个包的时候，要么不要，要么全要。比如使用 libwebsockets 的时候，本来是可以选择使用openssl，mbedtls或者其他的库作为SSL库的，或者说有些功能不需要可以连依赖库带功能都不开。但是使用 [vcpkg][1] 安装 libwebsockets 的话，就没得选了。不过现在好像设计了一个有点类似 [build2][5] 的方案([**Selecting library features**][15] 和 [`vcpkg_check_features`][16])，一定层度上解决了这个问题。
 
 第二个问题就是 [vcpkg][1] 官方支持的编译环境比较新。Windows下要求 VS 2015 Update 3以上，Linux 下要求 GCC 6以上, macOS也要求 Homebrew 且安装gcc 6以上。其他的环境有些也能支持但是是不受官方支持的。
 
 > 相对来说Conan的环境支持就比较好: https://docs.conan.io/en/latest/reference/config_files/settings.yml.html#settings-yml 。但是每个包的版本和对应工具链的兼容性得自己管理，还是十分不便。
 
-第三个问题比较难解决。就是大多数 [vcpkg][1] 里的包都是配置了从github下载的，也有些只从一些其他的URL下载。虽然说可以配置github的地址，但是 [vcpkg][1] 的从github下载包版本的代码里写的是使用的github的开放平台接口。最新版本好像是加了个 https://github.com/microsoft/vcpkg/blob/master/docs/users/registries.md 可以解决这个问题，不过操作方式还比较麻烦，相当于对依赖的包要自己重写 ports 了，对使用者的要求还是有点高。
+第三个问题比较难解决。大多数 [vcpkg][1] 里的包都是配置了从github下载的，也有些只从一些其他的URL下载。虽然说可以配置github的地址，但是 [vcpkg][1] 的从github下载包版本的代码里写的是使用的github的开放平台接口。新版本好像是加了个 https://github.com/microsoft/vcpkg/blob/master/docs/users/registries.md 可以解决这个问题，不过操作方式还比较麻烦，相当于对依赖的包要自己重写 ports 了，对使用者的要求还是有点高。
 
 还有一些周边的问题，有一个也是这几天搞 [opentelemetry-cpp][12] 的时候发现的。截至我写这篇文章的时候，[vcpkg][1] 的最后的Release版本是 `2021.05.12` ,里面的protobuf版本是 `3.15.8` 。前几天MSVC更新了 1929版本（VS 16.10） ，然后这个版本的 protobuf 刚好不支持，这就很尴尬了。
 
@@ -182,3 +182,5 @@ Windows Registry Editor Version 5.00
 [12]: https://github.com/open-telemetry/opentelemetry-cpp
 [13]: https://git-scm.com/
 [14]: https://github.com/atframework/cmake-toolset
+[15]: https://github.com/microsoft/vcpkg/blob/master/docs/users/selecting-library-features.md
+[16]: https://github.com/Microsoft/vcpkg/blob/master/docs/maintainers/vcpkg_check_features.md
