--- a/source/post/2021/2106.md
+++ b/source/post/2021/2106.md
@@ -161,10 +161,46 @@ Windows Registry Editor Version 5.00
 
 ## 最后
 
-目前 [cmake-toolset][14] 支持的平台是Linux,Windows,MinGW和macOS,Android,iOS,iPhone.Simulator。编译器支持gcc 4.8+，MSVC 1910+（VS 2017），clang没测太低的版本，它和gcc比较像所以应该也兼容比较低的版本。
 我的大部分工具已经迁移到新的 [cmake-toolset][14] 了，后续的也会慢慢迁移。以后再碰到什么问题再来写吧。
 
-最终我重构抽离出来的构建工具集位于 https://github.com/atframework/cmake-toolset 。主版本号保证API兼容，二级版本号指示是否有新功能，三级版本号是实现优化和修订。
+最终重构抽离出来的构建工具集 ([cmake-toolset][14]) 位于 https://github.com/atframework/cmake-toolset 。主版本号保证API兼容，二级版本号指示是否有新功能，三级版本号是实现优化和修订。
+
+以下是支持的环境(配置在CI测试中):
+
++ 默认行为:
+  + 启用[cmake][7]能够识别的编译器所支持的最新标准(当前最新会开启 `C++20` 和 `C11`)
+  + 对支持的编译环境启用 `C++20` 协程支持
+  + 对支持的编译环境启用 `C++20` Module支持
+  + MSVC:
+    + 默认使用 **UTF-8** 编码
+    + 对高版本编译器设置 `__cplusplus == _MSVC_LANG`
+      + 即设置 `/Zc:__cplusplus`
+      + 即和C++标准保持一致
+      + 可通过 `-DCOMPILER_OPTION_MSVC_ZC_CPP=OFF` 来关闭
+    + (非 [vcpkg][1] 模式)默认设置 `CMAKE_MSVC_RUNTIME_LIBRARY` 为 `MultiThreaded$<$<CONFIG:Debug>:Debug>$<$<NOT:$<STREQUAL:${VCPKG_CRT_LINKAGE},static>>:DLL>` (影响 `/MDd`, `/MD` 和 `/MTd`, `/MT`)
+  + Clang/AppleClang: 尝试优先使用 `libc++` 作为STL库。
+    + 可通过 `-DCOMPILER_OPTION_CLANG_ENABLE_LIBCXX=OFF` 来关闭
+  + Windows:
+    + `option(COMPILER_OPTION_WINDOWS_ENABLE_NOMINMAX "Add #define NOMINMAX." ON)`
+    + `option(COMPILER_OPTION_WINDOWS_ENABLE_WIN32_LEAN_AND_MEAN "Add #define WIN32_LEAN_AND_MEAN." OFF)`
+  + 额外的编译告警
+    + 提供 `COMPILER_STRICT_CFLAGS` 来开启严格的编译警告，并且关闭一些常用的设计模式导致的告警。(`-Wall -Werror`, `/W4 /WX`)
+    + 提供 `COMPILER_STRICT_EXTRA_CFLAGS` 来开启更严格的编译警告，并且关闭一些常用的设计模式导致的告警。(`-Wextra`)
++ 支持平台:
+  + Linux
+  + Windows
+  + MinGW
+  + macOS
+  + Android
+  + iOS
+  + iPhone.Simulator
++ 编译器:
+  + GCC 4.8-最新(当前GCC 11)
+  + Clang 5.0-最新(当前GCC 12)
+  + Visual Studio 2017-最新(当前Visual Studio 2019, 16.10, MSVC 1929)
++ 特殊的包:
+  + SSL替代: openssl,libressl,mbedtls([boringssl][18]依赖golang,会在未来添加)
+    > 未来还会添加: [libsodium][17]
 
 欢迎有兴趣的小伙伴互相交流。
 
@@ -184,3 +220,5 @@ Windows Registry Editor Version 5.00
 [14]: https://github.com/atframework/cmake-toolset
 [15]: https://github.com/microsoft/vcpkg/blob/master/docs/users/selecting-library-features.md
 [16]: https://github.com/Microsoft/vcpkg/blob/master/docs/maintainers/vcpkg_check_features.md
+[17]: https://libsodium.org/
+[18]: https://github.com/google/boringssl
